// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetsReducer should update state upon delete success 1`] = `
Object {
  "objects": Object {},
  "status": "loaded",
}
`;

exports[`AssetsReducer should update state upon failure 1`] = `
Object {
  "error": "Some error",
  "objects": Object {
    "98": Object {
      "id": "98",
      "name": "5 Sunrise St",
      "startDate": "2014-09-10",
      "type": "RealEstate",
      "valuations": Array [
        Object {
          "amount": 520000,
          "date": "2014-09-10",
          "note": "Purchase price",
        },
        Object {
          "amount": 705000,
          "date": "2016-04-15",
          "note": "Formal valuation",
        },
      ],
    },
  },
  "status": "error",
}
`;

exports[`AssetsReducer should update state upon failure 2`] = `
Object {
  "error": "Some error",
  "objects": Object {
    "98": Object {
      "id": "98",
      "name": "5 Sunrise St",
      "startDate": "2014-09-10",
      "type": "RealEstate",
      "valuations": Array [
        Object {
          "amount": 520000,
          "date": "2014-09-10",
          "note": "Purchase price",
        },
        Object {
          "amount": 705000,
          "date": "2016-04-15",
          "note": "Formal valuation",
        },
      ],
    },
  },
  "status": "error",
}
`;

exports[`AssetsReducer should update state upon failure 3`] = `
Object {
  "error": "Some error",
  "objects": Object {
    "98": Object {
      "id": "98",
      "name": "5 Sunrise St",
      "startDate": "2014-09-10",
      "type": "RealEstate",
      "valuations": Array [
        Object {
          "amount": 520000,
          "date": "2014-09-10",
          "note": "Purchase price",
        },
        Object {
          "amount": 705000,
          "date": "2016-04-15",
          "note": "Formal valuation",
        },
      ],
    },
  },
  "status": "error",
}
`;

exports[`AssetsReducer should update state upon load success 1`] = `
Object {
  "objects": Object {
    "98": Object {
      "id": "98",
      "name": "5 Sunrise St",
      "startDate": "2014-09-10",
      "type": "RealEstate",
      "valuations": Array [
        Object {
          "amount": 520000,
          "date": "2014-09-10",
          "note": "Purchase price",
        },
        Object {
          "amount": 705000,
          "date": "2016-04-15",
          "note": "Formal valuation",
        },
      ],
    },
    "99": Object {
      "id": "99",
      "name": "38/8 Briggs Road",
      "startDate": "2015-05-10",
      "type": "RealEstate",
      "valuations": Array [
        Object {
          "amount": 260000,
          "date": "2015-05-10",
          "note": "Formal valuation",
        },
      ],
    },
  },
  "status": "loaded",
}
`;

exports[`AssetsReducer should update state upon put success 1`] = `
Object {
  "objects": Object {
    "98": Object {
      "id": "98",
      "name": "5 Sunrise St",
      "startDate": "2014-09-10",
      "type": "RealEstate",
      "valuations": Array [
        Object {
          "amount": 520000,
          "date": "2014-09-10",
          "note": "Purchase price",
        },
        Object {
          "amount": 705000,
          "date": "2016-04-15",
          "note": "Formal valuation",
        },
      ],
    },
    "99": Object {
      "id": "99",
      "name": "38/8 Briggs Road",
      "startDate": "2015-05-10",
      "type": "RealEstate",
      "valuations": Array [
        Object {
          "amount": 260000,
          "date": "2015-05-10",
          "note": "Formal valuation",
        },
      ],
    },
  },
  "status": "loaded",
}
`;

exports[`AssetsReducer should update state upon request 1`] = `
Object {
  "objects": Object {
    "98": Object {
      "id": "98",
      "name": "5 Sunrise St",
      "startDate": "2014-09-10",
      "type": "RealEstate",
      "valuations": Array [
        Object {
          "amount": 520000,
          "date": "2014-09-10",
          "note": "Purchase price",
        },
        Object {
          "amount": 705000,
          "date": "2016-04-15",
          "note": "Formal valuation",
        },
      ],
    },
  },
  "status": "loading",
}
`;

exports[`AssetsReducer should update state upon request 2`] = `
Object {
  "objects": Object {
    "98": Object {
      "id": "98",
      "name": "5 Sunrise St",
      "startDate": "2014-09-10",
      "type": "RealEstate",
      "valuations": Array [
        Object {
          "amount": 520000,
          "date": "2014-09-10",
          "note": "Purchase price",
        },
        Object {
          "amount": 705000,
          "date": "2016-04-15",
          "note": "Formal valuation",
        },
      ],
    },
  },
  "status": "loading",
}
`;

exports[`AssetsReducer should update state upon request 3`] = `
Object {
  "objects": Object {
    "98": Object {
      "id": "98",
      "name": "5 Sunrise St",
      "startDate": "2014-09-10",
      "type": "RealEstate",
      "valuations": Array [
        Object {
          "amount": 520000,
          "date": "2014-09-10",
          "note": "Purchase price",
        },
        Object {
          "amount": 705000,
          "date": "2016-04-15",
          "note": "Formal valuation",
        },
      ],
    },
  },
  "status": "loading",
}
`;
